started work on the claims roles

--- a/public/assets/views/hmo/clients-partials/enrollee/medical-history.html
+++ b/public/assets/views/hmo/clients-partials/enrollee/medical-history.html
@@ -21,14 +21,14 @@
                                                 <span class="day text-bold">02</span>
                                             </div>
                                             <div class="inline-block">
-                                                <span class="block week-day text-extra-large">Wensdey</span>
+                                                <span class="block week-day text-extra-large">Wednesday</span>
                                                 <span class="block month text-large text-light">november 2014</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="timeline_title">
-                                        <i class="fa fa-check fa-2x pull-left fa-border"></i>
-                                        <h4 class="light-text no-margin padding-5">Appointment</h4>
+                                        <i class="fa fa-check fa-2x pull-left fa-border text-green"></i>
+                                        <h4 class="light-text no-margin padding-5">Approved</h4>
                                     </div>
                                     <div class="timeline_content">
                                         <b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
@@ -46,13 +46,13 @@
                                                 <span class="day text-bold">05</span>
                                             </div>
                                             <div class="inline-block">
-                                                <span class="block week-day text-extra-large">Wensdey</span>
+                                                <span class="block week-day text-extra-large">Wednesday</span>
                                                 <span class="block month text-large text-light">november 2014</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="timeline_title">
-                                        <i class="fa fa-map-marker fa-2x pull-left fa-border"></i>
+                                        <i class="fa fa-check fa-2x pull-left fa-border text-green"></i>
                                         <h4 class="light-text no-margin padding-5">Appointment</h4>
                                     </div>
                                     <div class="timeline_content">
@@ -78,13 +78,13 @@
                                                 <span class="day text-bold">12</span>
                                             </div>
                                             <div class="inline-block">
-                                                <span class="block week-day text-extra-large">Wensdey</span>
+                                                <span class="block week-day text-extra-large">Wednesday</span>
                                                 <span class="block month text-large text-white-transparent">november 2014</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="timeline_title">
-                                        <i class="fa fa-check-circle-o fa-2x pull-left fa-border"></i>
+                                        <i class="fa fa-check fa-2x pull-left fa-border text-green"></i>
                                         <h4 class="text-white no-margin padding-5">Test Solution</h4>
                                     </div>
                                     <div class="timeline_content">
@@ -116,13 +116,13 @@
                                                 <span class="day text-bold">05</span>
                                             </div>
                                             <div class="inline-block">
-                                                <span class="block week-day text-extra-large">Wensdey</span>
+                                                <span class="block week-day text-extra-large">Wednesday</span>
                                                 <span class="block month text-large text-light">november 2014</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="timeline_title">
-                                        <i class="fa fa-map-marker fa-2x pull-left fa-border"></i>
+                                        <i class="fa fa-check fa-2x pull-left fa-border text-green"></i>
                                         <h4 class="light-text no-margin padding-5">Appointment</h4>
                                     </div>
                                     <div class="timeline_content">
@@ -148,13 +148,13 @@
                                                 <span class="day text-bold">05</span>
                                             </div>
                                             <div class="inline-block">
-                                                <span class="block week-day text-extra-large">Wensdey</span>
+                                                <span class="block week-day text-extra-large">Wednesday</span>
                                                 <span class="block month text-large text-white-transparent">november 2014</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="timeline_title">
-                                        <i class="fa fa-map-marker fa-2x pull-left fa-border"></i>
+                                        <i class="fa fa-check fa-2x pull-left fa-border text-green"></i>
                                         <h4 class="text-white no-margin padding-5">Appointment</h4>
                                     </div>
                                     <div class="timeline_content">
@@ -180,7 +180,7 @@
                                                 <span class="day text-bold">05</span>
                                             </div>
                                             <div class="inline-block">
-                                                <span class="block week-day text-extra-large">Wensdey</span>
+                                                <span class="block week-day text-extra-large">Wednesday</span>
                                                 <span class="block month text-large text-white-transparent">november 2014</span>
                                             </div>
                                         </div>
@@ -201,7 +201,7 @@
                                                 <span class="day text-bold">05</span>
                                             </div>
                                             <div class="inline-block">
-                                                <span class="block week-day text-extra-large">Wensdey</span>
+                                                <span class="block week-day text-extra-large">Wednesday</span>
                                                 <span class="block month text-large text-light">november 2014</span>
                                             </div>
                                         </div>
