--- a/public/assets/views/hmo/home.html
+++ b/public/assets/views/hmo/home.html
@@ -6,188 +6,12 @@
 <!-- end: BREADCRUMB -->
 <!-- start: YOUR CONTENT HERE -->
 <!-- end: YOUR CONTENT HERE -->
-<div class="container-fluid container-fullw padding-bottom-10">
-    <div class="row">
-        <div class="col-sm-6 col-lg-3">
-            <div class="panel panel-white no-border no-radius">
-                <div class="panel-body no-padding">
-                    <div class="space10 padding-15">
-                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Enrolle Count</h5>
-                        <div class="block margin-top-15 margin-bottom-10 text-azure">
-                            <span class="counter" count-to="15635" value="0" duration="1" filter="number">15,635</span>
-                        </div>
-                        <span class="label partition-green text-white margin-top-10 margin-right-5">+11%</span><span class="text-extra-small">in the last 7 days</span>
-                    </div>
-                    <div class="padding-bottom-20">
-                        <uib-progressbar value="89" class="progress-xs no-radius background-dark no-margin" type="azure"></uib-progressbar>
-                        <p class="margin-10">
-                            <span class="text-extra-small text-light pull-right">89% <span class="label label-success">active</span> </span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-lg-3">
-            <div class="panel panel-white no-border no-radius">
-                <div class="panel-body no-padding">
-                    <div class="space10 padding-15">
-                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Organization Count</h5>
-                        <div class="block margin-top-15 margin-bottom-10 text-green">
-                            <span class="counter" count-to="53" value="0" duration="1" filter="number">53</span>
-                        </div>
-                        <span class="label partition-red text-white margin-top-10 margin-right-5">-1%</span><span class="text-extra-small">in the last 7 days</span>
-                    </div>
-                    <div class="padding-bottom-20">
-                        <uib-progressbar value="66" class="progress-xs no-radius background-dark no-margin" type="green"></uib-progressbar>
-                        <p class="margin-10">
-                            <span class="text-extra-small text-light pull-right">46% <span class="label label-success">active</span></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-lg-3">
-            <div class="panel panel-white no-border no-radius">
-                <div class="panel-body no-padding">
-                    <div class="space10 padding-15">
-                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Hospital Count</h5>
-                        <div class="block margin-top-15 margin-bottom-10 text-purple">
-                            <span class="counter" count-to="179" value="0" duration="1" filter="number">179</span>
-                        </div>
-                        <span class="label partition-green text-white margin-top-10 margin-right-5">+12%</span><span class="text-extra-small">in the last 7 days</span>
-                    </div>
-                    <div class="padding-bottom-20">
-                        <uib-progressbar value="77" class="progress-xs no-radius background-dark no-margin" type="purple"></uib-progressbar>
-                        <p class="margin-10">
-                            <span class="text-extra-small text-light pull-right">77% <span class="label label-success">active</span></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-lg-3">
-            <div class="panel panel-white no-border no-radius">
-                <div class="panel-body no-padding">
-                    <div class="space10 padding-15">
-                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Pharmacy Count</h5>
-                        <div class="block margin-top-15 margin-bottom-10 text-orange">
-                            <span class="counter" count-to="250" value="0" duration="1" filter="number">250</span>
-                        </div>
-                        <span class="label partition-red text-white margin-top-10 margin-right-5">-6%</span><span class="text-extra-small">in last 7 days</span>
-                    </div>
-                    <div class="padding-bottom-20">
-                        <uib-progressbar value="55" class="progress-xs no-radius background-dark no-margin" type="orange"></uib-progressbar>
-                        <p class="margin-10">
-                            <span class="text-extra-small text-light pull-right">55% <span class="label label-success">active</span></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div ng-if="currentUser.data.role.data.name == 'admin'">
+    <ng-include src=" 'assets/views/hmo/clients-partials/home/admin.html' "></ng-include>
 </div>
-<div class="container-fluid container-fullw padding-bottom-10">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="panel panel-white no-radius no-border" id="visits">
-                <div class="panel-heading padding-right-70">
-                    <h4 class="panel-title"> Branch Enrollee Chart </h4>
-                    <ct-paneltool class="panel-tools"  tool-expand="tool-expand"></ct-paneltool>
-                </div>
-                <div class="panel-wrapper">
-                    <div class="panel-body margin-bottom-10">
-                        <div>
-                            <canvas class="chart chart-line height-300" chart-data="data" chart-options="options" chart-labels="labels" chart-series="series" chart-colours="colors"></canvas>
-                        </div>
-                        <div class="row padding-top-20">
-                            <div class="col-md-3 col-sm-3 col-xs-6">
-                                <div class="text-small">
-                                    Abuja
-                                </div>
-                                <div class="text-green text-extra-large">
-                                    <span class="text-bold">14,160 <small>(Total)</small></span>
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-3 col-xs-6">
-                                <div class="text-small">
-                                    Port Harcourt
-                                </div>
-                                <div class="text-azure text-extra-large">
-                                    <span class="text-bold">11,720 <small>(Total)</small></span>
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-3 col-xs-6">
-                                <div class="text-small">
-                                    Lagos
-                                </div>
-                                <div class="text-purple text-extra-large">
-                                    <span class="text-bold">22,780 <small>(Total)</small></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="panel panel-white no-radius no-border">
-                <div class="panel-heading border-light">
-                    <h4 class="panel-title"> Branch TurnOver </h4>
-                    <ct-paneltool class="panel-tools" tool-refresh="load1" tool-expand="tool-expand"></ct-paneltool>
-                </div>
-                <div class="panel-body panel-dami">
-                    <div class="row">
-                        <div class="col-sm-6 col-lg-6">
-                            <div class="panel panel-grey panel-grey no-border no-radius">
-                                <div class="panel-body no-padding">
-                                    <div class="space10 padding-15">
-                                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Abuja Branch</h5>
-                                        <div class="block margin-top-15 margin-bottom-10 text-white">
-                                            <span class="counter-symbol">N</span>
-                                            <span class="counter" filter="number">12.34 M</span>
-                                        </div>
-                                        <span class="label partition-green text-white margin-top-10 margin-right-5">+11%</span><span class="text-extra-small">in the last month</span>
-                                    </div>
 
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6 col-lg-6">
-                            <div class="panel panel-orange no-border no-radius">
-                                <div class="panel-body no-padding">
-                                    <div class="space10 padding-15">
-                                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Lagos Branch</h5>
-                                        <div class="block margin-top-15 margin-bottom-10 text-white">
-                                            <span class="counter-symbol">N</span>
-                                            <span class="counter" filter="number">11.24 M</span>
-                                        </div>
-                                        <span class="label partition-red text-white margin-top-10 margin-right-5">-4%</span><span class="text-extra-small">in the last month</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row" style="margin-top: 20px !important;">
-                        <div class="col-sm-6 col-lg-6">
-                            <div class="panel panel-pink no-border no-radius">
-                                <div class="panel-body no-padding">
-                                    <div class="space10 padding-15">
-                                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Port Harcourt Branch</h5>
-                                        <div class="block margin-top-15 margin-bottom-10 text-white">
-                                            <span class="counter-symbol">N</span>
-                                            <span class="counter" filter="number">15.5 M</span>
-                                        </div>
-                                        <span class="label partition-green text-white margin-top-10 margin-right-5">+6%</span><span class="text-extra-small">in the last month</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
+<div ng-if="currentUser.data.role.data.name == 'claims'">
+    <ng-include src=" 'assets/views/hmo/clients-partials/home/claims.html' "></ng-include>
 </div>
+
 
