--- a/public/assets/views/hmo/clients-partials/enrollee/claims-medical-history.html
+++ b/public/assets/views/hmo/clients-partials/enrollee/claims-medical-history.html
@@ -28,7 +28,7 @@
                 </label>
                 <div class="col-sm-10">
                     <span class="label label-danger">12-09-2016</span>
-                    <span class="pull-right">Approved by <span class="label label-success">Dr Ben Carson</span></span>
+                    <span class="pull-right"><span class="label label-danger">Not Approved</span></span>
                 </div>
             </div>
             <div class="form-group">
@@ -49,6 +49,17 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="inputPassword3">
+                    Drug List
+                </label>
+                <div class="col-sm-10">
+                    <span class="label label-success">Panadol</span>
+                    <span class="label label-success">Novalgin</span>
+                    <span class="label label-success">Atesunate</span>
+                    <span class="label label-success">Vitamin Bco</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="inputPassword3">
                     Summary
                 </label>
                 <div class="col-sm-5">
@@ -58,7 +69,10 @@
             <div class="form-group margin-bottom-0">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button class="btn btn-o btn-primary" type="submit">
-                        Sign in
+                        Update
+                    </button>
+                    <button class="btn btn-o btn-green" type="submit">
+                        Approve
                     </button>
                 </div>
             </div>
@@ -93,6 +107,17 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="inputPassword3">
+                    Drug List
+                </label>
+                <div class="col-sm-10">
+                    <span class="label label-success">Panadol</span>
+                    <span class="label label-success">Novalgin</span>
+                    <span class="label label-success">Atesunate</span>
+                    <span class="label label-success">Vitamin Bco</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="inputPassword3">
                     Summary
                 </label>
                 <div class="col-sm-5">
@@ -102,8 +127,70 @@
             <div class="form-group margin-bottom-0">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button class="btn btn-o btn-primary" type="submit">
-                        Sign in
+                        Update
                     </button>
+                </div>
+                <div class="col-sm-offset-2 col-sm-10">
+
+                </div>
+            </div>
+        </form>
+
+    </div>
+    <div class="panel-footer">
+        <form role="form" class="form-horizontal">
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="inputEmail3">
+                    Date
+                </label>
+                <div class="col-sm-10">
+                    <span class="label label-danger">21-09-2016</span>
+                    <span class="pull-right">Approved by <span class="label label-success">Dr John Dayles</span></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="inputPassword3">
+                    Consultant
+                </label>
+                <div class="col-sm-3">
+                    <input type="text" placeholder="Password" id="inputPassword3" class="form-control" value="Dr Robert Darwin">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="inputPassword3">
+                    Diagnosis
+                </label>
+                <div class="col-sm-3">
+                    <input type="text" placeholder="Password" id="inputPassword3" class="form-control" value="Yello Fever">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="inputPassword3">
+                    Drug List
+                </label>
+                <div class="col-sm-10">
+                    <span class="label label-success">Panadol</span>
+                    <span class="label label-success">Novalgin</span>
+                    <span class="label label-success">Atesunate</span>
+                    <span class="label label-success">Vitamin Bco</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="inputPassword3">
+                    Summary
+                </label>
+                <div class="col-sm-5">
+                    <textarea class="form-control autosize area-animated msd-elastic: \n;" data-ng-model="bar"></textarea>
+                </div>
+            </div>
+            <div class="form-group margin-bottom-0">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button class="btn btn-o btn-primary" type="submit">
+                        Update
+                    </button>
+                </div>
+                <div class="col-sm-offset-2 col-sm-10">
+
                 </div>
             </div>
         </form>
