--- a/public/assets/views/hmo/clients-partials/home/admin.html
+++ b/public/assets/views/hmo/clients-partials/home/admin.html
@@ -133,14 +133,21 @@
                             <div class="panel panel-grey panel-grey no-border no-radius">
                                 <div class="panel-body no-padding">
                                     <div class="space10 padding-15">
-                                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Abuja Branch</h5>
-                                        <div class="block margin-top-15 margin-bottom-10 text-white">
-                                            <span class="counter-symbol">N</span>
-                                            <span class="counter" filter="number">12.34 M</span>
-                                        </div>
-                                        <span class="label partition-green text-white margin-top-10 margin-right-5">+11%</span><span class="text-extra-small">in the last month</span>
-                                    </div>
+                                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin margin-bottom-10">Port Harcourt Branch</h5>
 
+                                        <span class="label label-danger margin-top-10">Total Premium</span>
+                                        <div class="block margin-bottom-10 text-white">
+                                            <span class="counter-symbol">N</span>
+                                            <span class="counter" filter="number">23.5 M</span>
+                                        </div>
+
+                                        <span class="label margin-top-10 label-danger">Total Claims</span>
+                                        <div class="block  margin-bottom-10 text-white">
+                                            <span class="counter-symbol">N</span>
+                                            <span class="counter" filter="number">145.5 M</span>
+                                        </div>
+                                        <span class="label partition-green text-white margin-top-10 margin-right-5">+6%</span><span class="text-extra-small">in the last month</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -149,12 +156,20 @@
                             <div class="panel panel-orange no-border no-radius">
                                 <div class="panel-body no-padding">
                                     <div class="space10 padding-15">
-                                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Lagos Branch</h5>
-                                        <div class="block margin-top-15 margin-bottom-10 text-white">
+                                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin margin-bottom-10">Port Harcourt Branch</h5>
+
+                                        <span class="label label-danger margin-top-10">Total Premium</span>
+                                        <div class="block margin-bottom-10 text-white">
                                             <span class="counter-symbol">N</span>
-                                            <span class="counter" filter="number">11.24 M</span>
+                                            <span class="counter" filter="number">5.5 M</span>
                                         </div>
-                                        <span class="label partition-red text-white margin-top-10 margin-right-5">-4%</span><span class="text-extra-small">in the last month</span>
+
+                                        <span class="label margin-top-10 label-danger">Total Claims</span>
+                                        <div class="block  margin-bottom-10 text-white">
+                                            <span class="counter-symbol">N</span>
+                                            <span class="counter" filter="number">15.5 M</span>
+                                        </div>
+                                        <span class="label partition-green text-white margin-top-10 margin-right-5">+6%</span><span class="text-extra-small">in the last month</span>
                                     </div>
                                 </div>
                             </div>
@@ -165,10 +180,18 @@
                             <div class="panel panel-pink no-border no-radius">
                                 <div class="panel-body no-padding">
                                     <div class="space10 padding-15">
-                                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Port Harcourt Branch</h5>
-                                        <div class="block margin-top-15 margin-bottom-10 text-white">
+                                        <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin margin-bottom-10">Port Harcourt Branch</h5>
+
+                                        <span class="label label-danger margin-top-10">Total Premium</span>
+                                        <div class="block margin-bottom-10 text-white">
                                             <span class="counter-symbol">N</span>
                                             <span class="counter" filter="number">15.5 M</span>
+                                        </div>
+
+                                        <span class="label margin-top-10 label-danger">Total Claims</span>
+                                        <div class="block  margin-bottom-10 text-white">
+                                            <span class="counter-symbol">N</span>
+                                            <span class="counter" filter="number">25.5 M</span>
                                         </div>
                                         <span class="label partition-green text-white margin-top-10 margin-right-5">+6%</span><span class="text-extra-small">in the last month</span>
                                     </div>
