--- a/public/assets/views/partials/hmo/nav-claims.html
+++ b/public/assets/views/partials/hmo/nav-claims.html
@@ -41,8 +41,8 @@
         </a>
     </li>
 
-    <li ng-class="{'active open':$state.includes('dashboard.pharmacy')}">
-        <a href="javascript:void(0)">
+    <li ng-class="{'active open':$state.includes('reports')}">
+        <a ui-sref="reports.home">
             <div class="item-content">
                 <div class="item-media">
                     <letter-icon data="{{ 'Reports' | translate }}" char-count="2" size="sm"></letter-icon>
