--- a/public/assets/views/hmo/report.html
+++ b/public/assets/views/hmo/report.html
@@ -4,9 +4,9 @@
 </div>
 
 <div class="container-fluid container-fullw padding-bottom-10">
-    <div class="panel panel-dami" id="activities">
+    <div class="panel panel-white" id="activities">
         <div class="panel-heading border-light">
-            <h4 class="panel-title">Reports <small>(Claims)</small></h4>
+            <h4 class="panel-title">Charts <small>(Claims)</small></h4>
             <paneltool class="panel-tools" tool-collapse="tool-collapse" tool-refresh="load1" tool-dismiss="tool-dismiss"></paneltool>
         </div>
         <div uib-collapse="activities" ng-init="activities=false" class="panel-wrapper">
