--- a/public/assets/views/partials/hmo/nav-claims.html
+++ b/public/assets/views/partials/hmo/nav-claims.html
@@ -52,6 +52,14 @@
                 </div>
             </div>
         </a>
+        <ul class="sub-menu">
+            <li ui-sref-active="active">
+                <a ui-sref="reports.hospitals"> <span class="title" translate="Hospitals"> Hospitals </span> </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="reports.enrollee"> <span class="title" translate="Enrollee"> Enrollee </span> </a>
+            </li>
+        </ul>
     </li>
 
     <li ng-class="{'active open':$state.includes('settings')}">
