--- a/public/assets/views/hmo/clients-partials/home/claims.html
+++ b/public/assets/views/hmo/clients-partials/home/claims.html
@@ -1,5 +1,5 @@
 <div class="container-fluid container-fullw padding-bottom-10">
-    <div class="panel panel-dami" id="activities">
+    <div class="panel panel-white" id="activities">
         <div class="panel-heading border-light">
             <h4 class="panel-title text-primary">Enrollees Treated this week<span class="label label-danger font-10 pull-right">01-09-2016 - 08-09-2016</span>
             </h4>
@@ -8,8 +8,8 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-md-3 col-lg-2">
-                        <div class="panel panel-white no-radius hvr-grow-shadow">
-                            <div class="panel-heading border-bottom">
+                        <div class="panel panel-white no-radius hvr-grow-shadow border-dark">
+                            <div class="panel-heading border-bottom border-dark">
                                 <h4 class="panel-title"><strong><a href="#">John Doe</a></strong></h4>
                             </div>
                             <div class="panel-body"  onclick="location.href='#/partners/dashboard/clients/enrollee/1?tabIndex=5';" style="cursor: pointer;">
@@ -81,8 +81,8 @@
                     </div>
 
                     <div class="col-md-3 col-lg-2">
-                        <div class="panel panel-white no-radius hvr-grow-shadow">
-                            <div class="panel-heading border-bottom">
+                        <div class="panel panel-white no-radius hvr-grow-shadow border-dark">
+                            <div class="panel-heading border-bottom border-dark">
                                 <h4 class="panel-title"><strong><a href="#">John Doe</a></strong></h4>
                             </div>
                             <div class="panel-body"  onclick="location.href='#/partners/dashboard/clients/enrollee/1?tabIndex=5';" style="cursor: pointer;">
@@ -154,8 +154,8 @@
                     </div>
 
                     <div class="col-md-3 col-lg-2">
-                        <div class="panel panel-white no-radius hvr-grow-shadow">
-                            <div class="panel-heading border-bottom">
+                        <div class="panel panel-white no-radius hvr-grow-shadow border-dark">
+                            <div class="panel-heading border-bottom border-dark">
                                 <h4 class="panel-title"><strong><a href="#">John Doe</a></strong></h4>
                             </div>
                             <div class="panel-body"  onclick="location.href='#/partners/dashboard/clients/enrollee/1?tabIndex=5';" style="cursor: pointer;">
@@ -262,8 +262,8 @@
                         </div>
                     </div>
                     <div class="col-md-3 col-lg-2">
-                        <div class="panel panel-white no-radius hvr-grow-shadow">
-                            <div class="panel-heading border-bottom">
+                        <div class="panel panel-white no-radius hvr-grow-shadow border-dark" >
+                            <div class="panel-heading border-bottom border-dark">
                                 <h4 class="panel-title"><strong><a href="#">Jane Doe</a></strong></h4>
                             </div>
                             <div class="panel-body"  onclick="location.href='#/partners/dashboard/clients/enrollee/1?tabIndex=5';" style="cursor: pointer;">
