--- a/public/assets/views/hmo/home.html
+++ b/public/assets/views/hmo/home.html
@@ -12,6 +12,7 @@
 
 <div ng-if="currentUser.data.role.data.name == 'claims'">
     <ng-include src=" 'assets/views/hmo/clients-partials/home/claims.html' "></ng-include>
+    <ng-include src=" 'assets/views/hmo/clients-partials/home/claims-medical-rcd.html' "></ng-include>
 </div>
 
 
