--- a/public/assets/views/hmo/pharmacy.html
+++ b/public/assets/views/hmo/pharmacy.html
@@ -14,6 +14,7 @@
                     <uib-tab heading="Overview">
                         <div class="row">
                             <ng-include src=" 'assets/views/hmo/clients-partials/pharmacy/overview.html' "></ng-include>
+                            <ng-include src=" 'assets/views/hmo/clients-partials/pharmacy/care-distribution.html' "></ng-include>
                         </div>
                     </uib-tab>
                     <!-- end: TAB OVERVIEW -->
