--- a/public/assets/views/hmo/clients-partials/pharmacy/care-distribution.html
+++ b/public/assets/views/hmo/clients-partials/pharmacy/care-distribution.html
@@ -4,13 +4,13 @@
             <h4 class="panel-title text-primary">Care Distribution</h4>
             <paneltool class="panel-tools" tool-collapse="tool-collapse" tool-refresh="load1" tool-dismiss="tool-dismiss"></paneltool>
         </div>
-        <div uib-collapse="activities" ng-init="activities=false" class="panel-wrapper">
+        <div uib-collapse="activities" class="panel-wrapper">
             <div class="panel-body">
                 <div class="row">
                     <div>
                         <div class="col-sm-6">
                             <div class="text-center margin-bottom-15">
-                                <canvas class="chart chart-doughnut" chart-data="data" chart-options="options" chart-labels="labels" chart-series="series" chart-colours="colors" chart-legend="true"></canvas>
+                                <canvas class="chart chart-doughnut" chart-data="data_phar" chart-options="options_phar" chart-labels="labels_phar" chart-series="series_phar" chart-colours="colors_phar" chart-legend="true"></canvas>
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -41,22 +41,22 @@
                                     <table class="table margin-bottom-5">
                                         <tbody>
                                         <tr>
-                                            <td><strong>Diagnosis</strong></td>
+                                            <td><strong>Drug</strong></td>
                                             <td class="center"><strong>Amount (N)</strong></td>
                                             <td class="center"><strong>Count</strong></td>
                                         </tr>
                                         <tr>
-                                            <td>Typhoid</td>
+                                            <td>NZT24</td>
                                             <td class="center">521,000</td>
                                             <td class="center">17</td>
                                         </tr>
                                         <tr>
-                                            <td>Malaria</td>
+                                            <td>Novalgin</td>
                                             <td class="center">1,300,000</td>
                                             <td class="center">120</td>
                                         </tr>
                                         <tr>
-                                            <td>Yello Fever</td>
+                                            <td>Malaria Vaccine</td>
                                             <td class="center">230,000</td>
                                             <td class="center">4</td>
                                         </tr>
@@ -71,60 +71,60 @@
                                         <table class="table margin-bottom-5">
                                             <tbody>
                                             <tr>
-                                                <td><strong>Diagnosis</strong></td>
+                                                <td><strong>Drug</strong></td>
                                                 <td class="center"><strong>Amount (N)</strong></td>
                                                 <td class="center"><strong>Count</strong></td>
                                             </tr>
                                             <tr>
-                                                <td>Typhoid</td>
+                                                <td>NZT24</td>
                                                 <td class="center">521,000</td>
                                                 <td class="center">17</td>
                                             </tr>
                                             <tr>
-                                                <td>Malaria</td>
+                                                <td>Novalgin</td>
                                                 <td class="center">1,300,000</td>
                                                 <td class="center">120</td>
                                             </tr>
                                             <tr>
-                                                <td>Yello Fever</td>
+                                                <td>Malaria Vaccine</td>
                                                 <td class="center">230,000</td>
                                                 <td class="center">4</td>
                                             </tr>
                                             </tbody>
                                         </table>
                                     </v-pane-content>
-                            </v-pane>
-                            <v-pane>
-                                <v-pane-header>
-                                    Tertiary
-                                </v-pane-header>
-                                <v-pane-content>
-                                    <table class="table margin-bottom-5">
-                                        <tbody>
-                                        <tr>
-                                            <td><strong>Diagnosis</strong></td>
-                                            <td class="center"><strong>Amount (N)</strong></td>
-                                            <td class="center"><strong>Count</strong></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Typhoid</td>
-                                            <td class="center">521,000</td>
-                                            <td class="center">17</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Malaria</td>
-                                            <td class="center">1,300,000</td>
-                                            <td class="center">120</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Yello Fever</td>
-                                            <td class="center">230,000</td>
-                                            <td class="center">4</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </v-pane-content>
-                            </v-pane>
+                                </v-pane>
+                                <v-pane>
+                                    <v-pane-header>
+                                        Tertiary
+                                    </v-pane-header>
+                                    <v-pane-content>
+                                        <table class="table margin-bottom-5">
+                                            <tbody>
+                                            <tr>
+                                                <td><strong>Drug</strong></td>
+                                                <td class="center"><strong>Amount (N)</strong></td>
+                                                <td class="center"><strong>Count</strong></td>
+                                            </tr>
+                                            <tr>
+                                                <td>NZT24</td>
+                                                <td class="center">521,000</td>
+                                                <td class="center">17</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Novalgin</td>
+                                                <td class="center">1,300,000</td>
+                                                <td class="center">120</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Malaria Vaccine</td>
+                                                <td class="center">230,000</td>
+                                                <td class="center">4</td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </v-pane-content>
+                                </v-pane>
                         </v-accordion>
                     </div>
                 </div>
