--- a/public/assets/views/partials/sidebar.html
+++ b/public/assets/views/partials/sidebar.html
@@ -59,4 +59,8 @@
 <div ng-if="currentUser.data.role.data.name == 'claims'">
     <nav data-ng-include=" 'assets/views/partials/hmo/nav-claims.html' "></nav>
 </div>
+
+<div ng-if="currentUser.data.role.data.name == 'customer care'">
+    <nav data-ng-include=" 'assets/views/partials/hmo/nav-customer-care.html' "></nav>
+</div>
 <!-- end: SIDEBAR -->
